# k-fingraph

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: handoff.md  plan.md  question.md  review.md
data/reference/: kosdaq_all.csv  kospi200.csv  kospi_all.csv
docs/: architecture.md  conventions.md  data-notes.md  progress.md  schema.md  setup.md  testing.md  troubleshooting.md
docs/decisions/: 0001-package-manager-uv.md  0002-neo4j-aura-then-docker.md  0003-llm-extraction-gpt4o-mini.md  0004-graphrag-positioning.md  0005-v0-schema-scope.md  0006-owns-relation-type-thresholds.md  0007-v0-owns-loading-scope.md  0008-v0-owns-endpoint-resolution.md  0009-v05-owns-loading-scope.md  README.md
src/k_fingraph/: __init__.py  config.py  errors.py
src/k_fingraph/extract/: owns.py  owns_diagnostics.py
src/k_fingraph/graph/: client.py  load.py  migrations.py  queries.py
src/k_fingraph/interfaces/: _company_index.py  _viz.py  streamlit_app.py
src/k_fingraph/resolve/: owns.py
src/k_fingraph/schemas/: dart.py  graph.py  kospi200.py  queries.py  universe.py
src/k_fingraph/scripts/: load_v0.py  load_v05.py
src/k_fingraph/sources/: dart.py  dart_reports.py  extended_universe.py  kospi200.py
tasks/: backlog.md  current.md  done.md
tests/: conftest.py
tests/e2e/sources/: test_dart_corp_code_e2e.py  test_dart_endpoints_e2e.py
tests/fixtures/dart/: corp_code_sample.xml  hyslr_sttus_sample.json  otr_cpr_invstmnt_sample.json
tests/fixtures/krx/: kosdaq_sample.csv  (+2 more)
tests/integration/: conftest.py
tests/unit/: test_smoke.py
(+15 files in other folders)
